--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,78 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.images {
+    background-image: url("../components/bok.gif");
+
+    background-size: cover;
+    background-position: center;
+
+}
+
+.margin-right {
+    padding-right: 7px;
+    @apply border-r-2 border-white;
+
+}
+
+.hov :hover {
+ 
+ letter-spacing: 2px;
+
+}
+
+.back {
+    background-image: url("../public/aaa.jpeg");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    
+
+}
+
+body {
+    background-color: beige;
+    margin: 0;
+    padding: 0;
+  
+  
+    background-size: cover;
+    box-sizing: border-box;
+}
+
+.type {
+    color: black;
+
+}
+
+@layer components{
+
+.type::after {
+    content: '';
+    width: 90%;
+    height: 100%;
+  
+ 
+    position: absolute;
+
+    @apply border-r-2 border-black bg-orange-400 ;
+    
+    right: 0;
+    animation: animate 10s  infinite;
+    
+}
+
+
+@keyframes animate {
+    40%,60% {
+        right:92%;
+    }
+
+    100% {
+        @apply right-[-0%] ;
+    }
+}
+
+}
