--- a/styles/globals.css
+++ b/styles/globals.css
@@ -76,3 +76,14 @@ body {
 }
 
 }
+
+.under:hover {
+    text-decoration: underline;
+    color: yellowgreen;
+}
+
+.butt:hover {
+    background-color: blanchedalmond;
+    font-weight: 400;
+    font-family: Arial, Helvetica, sans-serif;
+}
